@startuml Command module structure

left to right direction
hide empty members

interface Command {
	{abstract} #expression: regex string
	{abstract} #executeOn: ExecuteOn
{abstract} +execute( action: Action ): Promise<any>
}

enum ExecuteOn {
	~Token
	~Message
}

class Action {
	+message: Message
	+token: string
}

class ImplementedCommand implements Command


Command <-- "input" Action
Command <--  ExecuteOn

@enduml